# python-skeleton-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  make.sh  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: on-pull.yml
app/src/: main.py
